# paper-plumber

./: .pylintrc  LICENSE  README.md  pyproject.toml  setup.py  test_run.sh
.github/workflows/: pytest.yml  workflow.yml
paperplumber/: __init__.py  logger.py  main.py
paperplumber/database/: __init__.py  findpapers_integration.py
paperplumber/parsing/: __init__.py  embedding_search.py  file_scan.py  llmreader.py  pdf_parser.py  scan_papers.py
paperplumber/pdf/: parser.py
tests/: test_embedding_search.py  test_findpapers.py  test_findpapers_integration.py  test_llmreader.py  test_scan_papers.py
tests/test_db/: papers.json
