[build-system]
requires = ["flit"]
build-backend = "flit_core.buildapi"

[project]
name = "paperplumber"
version = "0.0.1"
description = "A package for LLM-powered paper data mining."
readme = "README.md"
authors = [
    { name = "Carlos Outeiral", email = "carlos.outeiral@stats.ox.ac.uk" },
    { name = "Shuxiang Cao", email = "shuxiang.cao@physics.ox.ac.uk" },
]
license = { file = "LICENSE" }
homepage = "https://github.com/OxfordSchmidtAIFellows/paper-plumber"
include = ["**/*"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain>=0.0.196",
    'openai>=0.27.8'
]

[project.urls]
Source = "https://github.com/OxfordSchmidtAIFellows/paper-plumber"

[project.optional-dependencies]
dev = ["pytest>=6.2.4", "pytest-cov>=4.1.0"]
